# ConsoleLibrary

./: .gitignore  CMakeLists.txt  ConsoleLibrary.kdev4  ConsoleLibrary.sln  README.md  main.cpp
.kdev4/: ConsoleLibrary.kdev4
Breakout/: Breakout.cpp  Breakout.h  Breakout.kdev4  CMakeLists.txt  main.cpp
Breakout/.kdev4/: Breakout.kdev4
ConsoleLibrary/: .WinConsole.h.kate-swp  Console.cpp  Console.h  ConsoleLibrary.kdev4  LinuxConsole.cpp  LinuxConsole.h  Menu.cpp  Menu.h  WinConsole.cpp  WinConsole.h  WinConsole2.cpp  WinConsole2.h
ConsoleLibrary/.kdev4/: ConsoleLibrary.kdev4
Debug/: Snake.ilk
Pong/: Ball.cpp  Ball.h  CMakeLists.txt  Pong.kdev4  Pong.vcxproj  Pong.vcxproj.filters  main.cpp
Pong/.kdev4/: Pong.kdev4
ProgramLauncher/: CMakeLists.txt  ProgramLauncher.kdev4  ProgramLauncher.vcxproj  ProgramLauncher.vcxproj.filters  main.cpp  manifest.txt
Snake/: CMakeLists.txt  Console.cpp  Console.h  Menu.cpp  Menu.h  ReadMe.txt  Snake.cpp  Snake.h  Snake.kdev4  Snake.vcxproj  Snake.vcxproj.filters  main.cpp  stdafx.cpp  stdafx.h  targetver.h
Snake/.kdev4/: Snake.kdev4
Snake/Debug/: CL.read.1.tlog  CL.write.1.tlog  Snake.lastbuildstate  Snake.pch  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
SpaceInvaders/: Bullet.cpp  Bullet.h  CMakeLists.txt  CollisionDetectorController.cpp  CollisionDetectorController.h  GameField.cpp  GameField.h  GameFieldController.cpp  GameFieldController.h  GameFigure.cpp  GameFigure.h  GameFigureController.cpp  GameFigureController.h  GameMatrix.cpp  GameMatrix.h  Invader.cpp  Invader.h  InvaderController.cpp  InvaderController.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  ReadMe.txt  Shield.cpp  Shield.h  SpaceInvaders.cpp  SpaceInvaders.kdev4  SpaceInvaders.vcxproj  SpaceInvaders.vcxproj.filters  Vector2D.cpp  Vector2D.h  main.cpp
Tetris/: Shape.cpp  Shape.h  Tetris.vcxproj  Tetris.vcxproj.filters  main.cpp
ipch/snake-57cb0a3f/: snake-9ca0c1e.ipch
